--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <!-- This is about section -->
 
-  <div class="about-container">
+  <div class="about-container" id="About">
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="col-md-9 py-5 text-white">
@@ -87,7 +87,7 @@
         </div>
 
         <div class="col-md-3">
-          <img src="/img/piccc.jpg" alt="Shahriar" class="img-fluif rounded-circle border border-light">
+          <img src="/img/piccc.jpg" alt="Shahriar" class="img-fluid rounded-circle border border-light">
         </div>
       </div>
 
